# scnt-pypuq

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  settings.env  setup.py  setup.sh
pytest/: test_benchmarks.py  test_calculator.py  test_lists.py  test_module.py  test_quantity.py  test_unit_system.py
src/: pypuq.cpp
